# whisper-jni

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.gradle  build_android.sh  build_crap.ps1  build_cuda.ps1  build_cuda.sh  build_debian.sh  build_linux.sh  build_mac.sh  build_macos.sh  build_win.ps1  build_win_vulkan.ps1  build_windows.ps1  deleteme.sh  dockerfile  download-vad-model.ps1  download-vad-model.sh  gen_header.sh  pom.xml  tempbuild.sh
.github/workflows/: android.yml  build_cuda.yml  build_cuda_linux.yml  build_win_vulkan.yml  main.yml  test.yml
src/main/java/io/github/freshsupasulley/whisperjni/: LibraryUtils.java  TokenData.java  WhisperContext.java  WhisperContextParams.java  WhisperFullParams.java  WhisperGrammar.java  WhisperJNI.java  WhisperSamplingStrategy.java  WhisperState.java  WhisperVADContextParams.java  WhisperVADSegment.java
src/main/java/io/github/givimad/whisperjni/: TokenData.java  WhisperContext.java  WhisperContextParams.java  WhisperFullParams.java  WhisperGrammar.java  WhisperJNI.java  WhisperSamplingStrategy.java  WhisperState.java
src/main/java/io/github/givimad/whisperjni/internal/: LibraryUtils.java
src/main/java/io/github/jaffe2718/whisperjni/: LibraryUtils.java  TokenData.java  WhisperContext.java  WhisperContextParams.java  WhisperFullParams.java  WhisperGrammar.java  WhisperJNI.java  WhisperSamplingStrategy.java  WhisperState.java  WhisperVADContextParams.java  WhisperVADSegment.java
src/main/native/: io_github_freshsupasulley_whisperjni_WhisperJNI.cpp  io_github_freshsupasulley_whisperjni_WhisperJNI.h  io_github_givimad_whisperjni_WhisperJNI.cpp  io_github_givimad_whisperjni_WhisperJNI.h  io_github_jaffe2718_whisperjni_WhisperJNI.cpp  io_github_jaffe2718_whisperjni_WhisperJNI.h
src/test/java/io/github/freshsupasulley/whisperjni/: WhisperJNITest.java
src/test/java/io/github/givimad/whisperjni/: WhisperJNITest.java
src/test/java/io/github/jaffe2718/whisperjni/: WhisperJNITest.java
